# Optimal-Binary-Search-Tree

./: .gitignore  CMakeLists.txt  README.md
include/: Benchmark.hpp  BinarySearchTree.hpp  OptimalBinarySearchTree.hpp
source/: Benchmark.cpp  BinarySearchTree.cpp  OptimalBinarySearchTree.cpp  main.cpp
